# VT100

./: CMakeLists.txt  fifo.c  fifo.h  main.cpp  run_tests.bat  shell.cpp  shell.h  term.cpp  term.h
.cache/clangd/index/: main.cpp.F2C78FE7A95BF8FB.idx  term.cpp.68A37EE5987170E9.idx
tests/: CMakeLists.txt  test_fifo.cpp  test_shell.cpp  test_term.cpp
